apps/gitea/deployment/gitea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-nodeport
  namespace: gitea

spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30015
  selector:
    io.kompose.service: server

---

apiVersion: v1
kind: Service
metadata:
  name: giteadb-nodeport
  namespace: gitea

spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30200
  selector:
    io.kompose.service: db
