apps/gitea/deployment/gitea-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: gitea
  namespace: gitea
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/gitea: "true"
  podSelector:
    matchLabels:
      io.kompose.network/gitea: "true"
